# NeurIPS2024Scrape

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  requirments.txt
ConferenceTables/: ICLR_cc_2024_Conference.csv  ICML_cc_2024_Conference.csv  robot-learning_org_CoRL_2024_Conference.csv  robot-learning_org_CoRL_2025_Conference.csv
OpenreviewScrape/: openreview_utils.py  pdf_downloader.py  run_pipeline.py  video_utils.py
docs/: keyword_normalization.tsv  new_html_viewer_of_conferences.md
htmls/: corl_2024_papers_report.html  corl_2024_papers_report2.html  robotic_papers_report.html
specific_scripts/: build_all_conferences_filter.py  build_iclr2026_worldmodel_website.py  download_top_pdfs.py  fetch_citations.py  normalize_keywords.py  serve_conferences.py
specific_scripts/iclr2026_worldmodel_site/: package.json  server.js
specific_scripts/iclr2026_worldmodel_site/public/: app.js  index.html  styles.css
tst/: tst_corl_2024_html.py  tst_download_video.py  tst_robotic_papers.py
